fixed today link behind calendar

--- a/goal_e_project/goal_e/static/goal_e/css/main.less
+++ b/goal_e_project/goal_e/static/goal_e/css/main.less
@@ -829,7 +829,7 @@ header {
 
     .today {
         background-color: rgb(225,225,225);
-        z-index: -1;
+        background-clip: padding-box;
     }
 }
 
